ingress-cf-host-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cf-host-update
spec:
  selector:
    matchLabels:
      app: cf-host-update
  replicas: 1
  template:
    metadata:
      labels:
        app: cf-host-update
    spec:
      containers:
        - name: app
          image: 192.168.80.4:32000/cf-host-update:b00002
          volumeMounts:
            - name: webhook-cert
              mountPath: /certs/
              readOnly: true
      volumes:
        - name: webhook-cert
          secret:
            secretName: cf-host-update

---

apiVersion: v1
kind: Service
metadata:
  name: cf-host-update
spec:
  selector:
    app: cf-host-update
  ports:
    - name: https
      port: 443
      targetPort: 443

---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: cf-host-update-webhook
webhooks:
- name: "cf-host-update.ingress.kubernetes.io"
  rules:
  - apiGroups:   ["extensions", "networking.k8s.io"]
    apiVersions: ["v1", "v1beta1"]
    operations:  ["CREATE", "UPDATE"]
    resources:   ["ingresses"]
    scope:       "*"
  clientConfig:
    service:
      name: "cf-host-update"
      namespace: "ingress-nginx"
      path: "/validating-webhook"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
