ingress-ngx-dns-sync.yaml
apiVersion: v1
kind: Service
metadata:
  name: dns-sync
spec:
  selector:
    app: dns-sync
  ports:
    - name: https
      port: 443
      targetPort: 443

---

apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: dns-sync-webhook
webhooks:
- name: "dns-sync.ingress.kubernetes.io"
  rules:
  - apiGroups:   ["extensions", "networking.k8s.io"]
    apiVersions: ["v1", "v1beta1"]
    operations:  ["CREATE", "UPDATE"]
    resources:   ["ingresses"]
    scope:       "*"
  clientConfig:
    service:
      name: "dns-sync"
      namespace: "ingress-nginx"
      path: "/validating-webhook"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dns-sync
spec:
  selector:
    matchLabels:
      app: dns-sync
  replicas: 1
  template:
    metadata:
      labels:
        app: dns-sync
    spec:
      containers:
        - name: app
          image: 192.168.80.4:32000/dns-sync:b00008
          volumeMounts:
            - name: webhook-cert
              mountPath: /certs/
              readOnly: true
      volumes:
        - name: webhook-cert
          secret:
            secretName: dns-sync
      serviceAccount: dns-sync-account
